Refactor logging and registering to use auth server and backend together
